--- a/app/src/main/res/values/strings_user.xml
+++ b/app/src/main/res/values/strings_user.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="user_login">登录</string>
     <string name="user_input_phone_number">请填写正确手机号</string>
     <string name="user_password_cannot_less_six">密码不能小于6位</string>
     <string name="user_achieve_verify_code">获取验证码</string>
